--- a/style.css
+++ b/style.css
@@ -1,4 +1,25 @@
 body{
     font-family : Arial, Helvetica, sans-serif;
     font-size: 16px;
+    line-height: 1.5;
+    margin-left: 20px;
+    padding: 0;
+}
+h2 {
+font-size: 48px;
+margin-top: 20px;
+margin-bottom: 10px;
+}
+
+p{
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.HTML{
+    font-size: 20px;
+    color:blue;
+}
+#HTML{
+    font-size: 25px;
+    color: rgb(243, 10, 57);
 }
